Opened 13 years ago
Closed 13 years ago
#3000 closed defect (fixed)
wmalossless sample breaks ffplay -autoexit
| Reported by: | Carl Eugen Hoyos | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avcodec |
| Version: | git-master | Keywords: | wmalossless regression |
| Cc: | cus@passwd.hu | Blocked By: | |
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
The sample from ticket #2993 does not exit on eof with -autoexit.
http://samples.ffmpeg.org/ffmpeg-bugs/trac/ticket2993/
$ ffplay vc1.wmv -autoexit
ffplay version N-56667-g32cde96 Copyright (c) 2003-2013 the FFmpeg developers
built on Sep 26 2013 07:44:39 with gcc 4.7 (SUSE Linux)
configuration: --enable-gpl
libavutil 52. 46.100 / 52. 46.100
libavcodec 55. 33.100 / 55. 33.100
libavformat 55. 18.102 / 55. 18.102
libavdevice 55. 3.100 / 55. 3.100
libavfilter 3. 87.100 / 3. 87.100
libswscale 2. 5.100 / 2. 5.100
libswresample 0. 17.103 / 0. 17.103
libpostproc 52. 3.100 / 52. 3.100
Input #0, asf, from 'vc1.wmv':= 0KB vq= 0KB sq= 0B f=0/0
Metadata:
WMFSDKNeeded : 0.0.0.0000
DeviceConformanceTemplate: N1
WM/WMADRCPeakReference: 32734
WM/WMADRCPeakTarget: 32734
WM/WMADRCAverageReference: 2710
WM/WMADRCAverageTarget: 2710
WMFSDKVersion : 10.00.00.4054
IsVBR : 1
Duration: 00:02:51.79, start: 0.000000, bitrate: 1112 kb/s
Stream #0:0(eng): Video: vc1 (Advanced) (WMVA / 0x41564D57), yuv420p, 160x120, 571 kb/s, 24 tbr, 1k tbn, 1k tbc
Stream #0:1(eng): Audio: wmalossless (c[1][0][0] / 0x0163), 44100 Hz, stereo, s16p, 677 kb/s
[wmalossless @ 0x7fafdc002820] buf size 0 invalid
[wmalossless @ 0x7fafdc002820] buf size 0 invalid
[wmalossless @ 0x7fafdc002820] buf size 0 invalid
[wmalossless @ 0x7fafdc002820] Found empty subframe
[wmalossless @ 0x7fafdc002820] buf size 0 invalid
Last message repeated 22 times
...
$ ffplay vc1.wmv -an -autoexit
ffplay version N-56667-g32cde96 Copyright (c) 2003-2013 the FFmpeg developers
built on Sep 26 2013 07:44:39 with gcc 4.7 (SUSE Linux)
configuration: --enable-gpl
libavutil 52. 46.100 / 52. 46.100
libavcodec 55. 33.100 / 55. 33.100
libavformat 55. 18.102 / 55. 18.102
libavdevice 55. 3.100 / 55. 3.100
libavfilter 3. 87.100 / 3. 87.100
libswscale 2. 5.100 / 2. 5.100
libswresample 0. 17.103 / 0. 17.103
libpostproc 52. 3.100 / 52. 3.100
Input #0, asf, from 'vc1.wmv':= 0KB vq= 0KB sq= 0B f=0/0
Metadata:
WMFSDKNeeded : 0.0.0.0000
DeviceConformanceTemplate: N1
WM/WMADRCPeakReference: 32734
WM/WMADRCPeakTarget: 32734
WM/WMADRCAverageReference: 2710
WM/WMADRCAverageTarget: 2710
WMFSDKVersion : 10.00.00.4054
IsVBR : 1
Duration: 00:02:51.79, start: 0.000000, bitrate: 1112 kb/s
Stream #0:0(eng): Video: vc1 (Advanced) (WMVA / 0x41564D57), yuv420p, 160x120, 571 kb/s, 24 tbr, 1k tbn, 1k tbc
Stream #0:1(eng): Audio: wmalossless (c[1][0][0] / 0x0163), 44100 Hz, stereo, s16p, 677 kb/s
171.75 M-V: -0.038 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
Change History (3)
comment:1 by , 13 years ago
| Cc: | added |
|---|---|
| Component: | undetermined → avcodec |
| Keywords: | regression added |
comment:2 by , 13 years ago
| Priority: | normal → important |
|---|---|
| Reproduced by developer: | set |
| Status: | new → open |
comment:3 by , 13 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



My guess is that this is caused by 851a6e2f. Flushing the codec with the NULL packet where packet_size=0 is broken, because error is returned instead of 0.