avcodec/wmalosslessdec: fix data flushing at the end

Fixes ffplay -autoexit
Fixes Ticket3000

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>